--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--[if !IE]><!-->
 <html lang="en"><!-- <![endif]-->
 <head>
-    <title>Happy Birthday</title>
+    <title>美(憨)少(憨)女厌厌子 生日快乐</title>
     <meta charset="UTF-8"/>
     <meta name="description" content="Happy Birthday">
     <meta name="robots" content="index, follow"/>
